force-app/main/default/objects/Account/fields/Anu_test_1__c.field-meta.xml
<CustomField>
    <fullName>Anu_test_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anu test 1</label>
    <type>Checkbox</type>
</CustomField>