force-app/main/default/objects/Account/fields/Anu_test_2__c.field-meta.xml
<CustomField>
    <fullName>Anu_test_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anu test 2</label>
    <type>Checkbox</type>
</CustomField>