force-app/main/default/objects/Account/fields/Customer_Health_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_2__c</fullName>
    <label>Customer Health 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>