force-app/main/default/objects/Account/fields/Env_sync1__c.field-meta.xml
<CustomField>
    <fullName>Env_sync1__c</fullName>
    <label>Env sync1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>