force-app/main/default/objects/Account/fields/Env_sync2__c.field-meta.xml
<CustomField>
    <fullName>Env_sync2__c</fullName>
    <label>Env sync2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>