force-app/main/default/objects/Account/fields/Env_Sync3__c.field-meta.xml
<CustomField>
    <fullName>Env_Sync3__c</fullName>
    <label>Env Sync3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>