force-app/main/default/objects/Account/fields/rehns1__c.field-meta.xml
<CustomField>
    <fullName>rehns1__c</fullName>
    <label>rehns1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>