force-app/main/default/objects/Account/fields/rehns2__c.field-meta.xml
<CustomField>
    <fullName>rehns2__c</fullName>
    <label>rehns2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>