force-app/main/default/objects/Account/fields/rehns3__c.field-meta.xml
<CustomField>
    <fullName>rehns3__c</fullName>
    <label>rehns3</label>
    <length>39</length>
    <type>Text</type>
</CustomField>