force-app/main/default/objects/Account/fields/rehsuat1__c.field-meta.xml
<CustomField>
    <fullName>rehsuat1__c</fullName>
    <label>rehsuat1</label>
    <length>45</length>
    <type>Text</type>
</CustomField>