force-app/main/default/objects/Account/fields/rehsuat2__c.field-meta.xml
<CustomField>
    <fullName>rehsuat2__c</fullName>
    <label>rehsuat2</label>
    <length>55</length>
    <type>Text</type>
</CustomField>