force-app/main/default/objects/Account/fields/rehsuat6__c.field-meta.xml
<CustomField>
    <fullName>rehsuat6__c</fullName>
    <label>rehsuat6</label>
    <length>66</length>
    <type>Text</type>
</CustomField>