force-app/main/default/objects/Account/fields/Test_FR__c.field-meta.xml
<CustomField>
    <fullName>Test_FR__c</fullName>
    <description>this is for parallel commit changes</description>
    <inlineHelpText>testing</inlineHelpText>
    <label>Test FR</label>
    <length>21</length>
    <type>Text</type>
</CustomField>