force-app/main/default/objects/Account/fields/Testing_rollback1__c.field-meta.xml
<CustomField>
    <fullName>Testing_rollback1__c</fullName>
    <label>Testing rollback1</label>
    <length>21</length>
    <type>Text</type>
</CustomField>