force-app/main/default/objects/Account/fields/Testing_rollback_SFDX__c.field-meta.xml
<CustomField>
    <fullName>Testing_rollback_SFDX__c</fullName>
    <description>Testing rollback using source format and checking after changes</description>
    <label>Testing rollback SFDX</label>
    <length>21</length>
    <type>Text</type>
</CustomField>