force-app/main/default/objects/Account/fields/Testv4_29__c.field-meta.xml
<CustomField>
    <fullName>Testv4_29__c</fullName>
    <label>Testv4.29</label>
    <length>18</length>
    <type>Text</type>
</CustomField>