force-app/main/default/objects/Account/recordTypes/rcpicklist.recordType-meta.xml
<RecordType>
    <fullName>rcpicklist</fullName>
    <active>true</active>
    <label>rcpicklist</label>
</RecordType>